examples/negatives/string_addition_negative.bl
// string addition not supported
var str_added: String = "Pranjal" + "Dhakal";
print(str_added);
